deploiement kub/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: appmartinique # id kubernetes, pour repérer, mise à jour etc.., unique pour chaque namespacexressource
  #1 trio d'unicité : namespace/name/kind
spec:
  replicas: 1
  selector: # système labels selector, marqueurs etc.. pour repérer par la suite et sélectionner
    matchLabels:
      app: appmartinique # comment retrouver mes pods ? (avec quel label ?)
  template: # je mets des labels sur les pods-> le déploiement donenra naissance à des pods auxquels le label nginxlabel1 sera donné
    metadata:
      labels:
        app: appmartinique
    spec:
      volumes:
        - name: volumepartage # verif de la disponibilité de la pvc
          persistentVolumeClaim:
            claimName: mon-espace

      containers:
        - name: nginx
          image: cguillo/sitemartinique
          imagePullPolicy: Always # Je peux delete le pod pour qu'il aille chercher : la nouvelle image sur dockerhub
          volumeMounts:
            - mountPath: /usr/share/nginx/html/img  # c'est l'endroit dans le docker nginx où on veut monter le volume ie où on veut voir les fixchiers qu'on aura plcé grâce à l'init docker
              name: volumepartage
