deploiement kub/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: appmartinique
spec:
  serviceName: "appmartiniquebibi"
  selector:
    matchLabels:
      app: appmartinique
  replicas: 1
  template: # je mets des labels sur les pods-> le déploiement donenra naissance à des pods auxquels le label nginxlabel1 sera donné
    metadata:
      labels:
        app: appmartinique
    spec:
      volumes:
        - name: volumepartage # verif de la disponibilité de la pvc
          persistentVolumeClaim:
            claimName: mon-espace

      containers:
        - name: nginx
          image: cguillo/sitemartinique:v5
          imagePullPolicy: Always # Je peux delete le pod pour qu'il aille chercher : la nouvelle image sur dockerhub
          volumeMounts:
            - mountPath: /usr/share/nginx/html/img  # c'est l'endroit dans le docker nginx où on veut monter le volume ie où on veut voir les fixchiers qu'on aura plcé grâce à l'init docker
              name: volumepartage
